--- a/FlaskWebProject/templates/post.html
+++ b/FlaskWebProject/templates/post.html
@@ -31,13 +31,17 @@
         </div>
         <div class="col-sm-4">
             {% if form.image_path.data %}
-            <p><img src="{{ imageSource + form.image_path.data }}" width="250" height="250" /></p>
+            <!-- ✅ Fixed: show image from Azure Blob Storage -->
+            <p>
+                <img src="https://{{ config['BLOB_ACCOUNT'] }}.blob.core.windows.net/{{ config['BLOB_CONTAINER'] }}/{{ form.image_path.data }}" 
+                     width="250" height="250" />
+            </p>
             {% endif %}
             <p>
                 {{ form.image_path.label }}<br>
                 {{ form.image_path }}
                 {% for error in form.image_path.errors %}
-                <span style="color: red;">{{ error.join(form.image_path.errors) }}</span>
+                <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </p>
         </div>
